--- a/to_retropie_configs_all/videomodes.cfg
+++ b/to_retropie_configs_all/videomodes.cfg
@@ -1,1 +1,25 @@
-
+lr-genesis-plus-gx = "NTSC 4:3 P"
+lr-snes9x = "NTSC 4:3 P"
+lr-snes9x2010 = "NTSC 4:3 P"
+lr-snes9x2005 = "NTSC 4:3 P"
+lr-nestopia = "NTSC 4:3 P"
+lr-fbalpha = "NTSC 4:3 P"
+lr-mame2010 = "NTSC 4:3 P"
+lr-mame2003 = "NTSC 4:3 P"
+lr-mame2000 = "NTSC 4:3 P"
+lr-stella = "NTSC 4:3 P"
+lr-o2em = "NTSC 4:3 P"
+lr-bluemsx = "NTSC 4:3 P"
+lr-prosystem = "NTSC 4:3 P"
+lr-beetle-pce-fast = "NTSC 4:3 P"
+lr-gambatte = "NTSC 4:3 P"
+lr-handy = "NTSC 4:3 P"
+lr-beetle-supergrafx = "NTSC 4:3 P"
+lr-picodrive = "NTSC 4:3 P"
+lr-beetle-vb = "NTSC 4:3 P"
+lr-mgba = "NTSC 4:3 P"
+lr-beetle-ngp = "NTSC 4:3 P"
+lr-beetle-wswan = "NTSC 4:3 P"
+lr-fceumm = "NTSC 4:3 P"
+lr-nestopia = "NTSC 4:3 P"
+lr-quicknes = "NTSC 4:3 P"
